Initial import of standalone TNode implementation example
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@14 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,74 @@
 * text=auto !eol
+node-gem/CalcColumn.BAT -text
+node-gem/Makefile -text
+node-gem/array.h -text
+node-gem/databr.h -text
+node-gem/datach.h -text
+node-gem/doc/Readme.1st -text
+node-gem/gdatastream.cpp -text
+node-gem/gdatastream.h -text
+node-gem/gem_node-sep.pro -text
+node-gem/gem_node.pro -text
+node-gem/gstring.cpp -text
+node-gem/gstring.h -text
+node-gem/ipm_chemical.cpp -text
+node-gem/ipm_chemical2.cpp -text
+node-gem/ipm_chemical3.cpp -text
+node-gem/ipm_main.cpp -text
+node-gem/ipm_simplex.cpp -text
+node-gem/jama_cholesky.h -text
+node-gem/jama_lu.h -text
+node-gem/m_const.h -text
+node-gem/m_param.h -text
+node-gem/main.cpp -text
+node-gem/ms_multi.cpp -text
+node-gem/ms_multi.h -text
+node-gem/ms_multi_file.cpp -text
+node-gem/ms_multi_format.cpp -text
+node-gem/ms_param.cpp -text
+node-gem/node.cpp -text
+node-gem/node.h -text
+node-gem/node_format.cpp -text
+node-gem/obj/Readme.txt -text
+node-gem/obj/gdatastream.obj -text
+node-gem/obj/gstring.obj -text
+node-gem/obj/ipm_chemical.obj -text
+node-gem/obj/ipm_chemical2.obj -text
+node-gem/obj/ipm_chemical3.obj -text
+node-gem/obj/ipm_main.obj -text
+node-gem/obj/ipm_simplex.obj -text
+node-gem/obj/main.obj -text
+node-gem/obj/ms_multi_file.obj -text
+node-gem/obj/ms_multi_format.obj -text
+node-gem/obj/ms_param.obj -text
+node-gem/obj/node.obj -text
+node-gem/obj/node_format.obj -text
+node-gem/obj/s_fgl.obj -text
+node-gem/platform/Linux-GNU/Makefile -text
+node-gem/platform/Linux-PGI/Makefile -text
+node-gem/platform/other/Makefile -text
+node-gem/platform/win32bcc/Makefile -text
+node-gem/platform/win32msvc/Makefile -text
+node-gem/s_fgl.cpp -text
+node-gem/s_fgl.h -text
+node-gem/test_data/CalcColumn-dat.lst -text
+node-gem/test_data/CalcColumn-dbr-0-0000.dat -text
+node-gem/test_data/CalcColumn-dbr-0-0001.dat -text
+node-gem/test_data/CalcColumn-dch.dat -text
+node-gem/test_data/CalcColumn-ipm.dat -text
+node-gem/test_data/CalcColumn.ipm -text
+node-gem/test_data/CalcColumn.txt -text
+node-gem/test_data/Readme.1st -text
+node-gem/tnt.h -text
+node-gem/tnt_array1d.h -text
+node-gem/tnt_array2d.h -text
+node-gem/tnt_i_refvec.h -text
+node-gem/tp_test/CalcColumn-dat.lst -text
+node-gem/tp_test/CalcColumn-dbr-0-0000.dat -text
+node-gem/tp_test/CalcColumn-dbr-0-0001.dat -text
+node-gem/tp_test/CalcColumn-dch.dat -text
+node-gem/tp_test/CalcColumn-ipm.dat -text
+node-gem/tp_test/CalcColumn.ipm -text
+node-gem/tp_test/CalcColumn.txt -text
+node-gem/v_user.h -text
+node-gem/verror.h -text
