Initial import of standalone TNodeArray implementation example (produces gemipm2k.exe with some FMT models from the GEM2MT module of GEMS-PSI)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@15 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -72,3 +72,63 @@ node-gem/tp_test/CalcColumn.ipm -text
 node-gem/tp_test/CalcColumn.txt -text
 node-gem/v_user.h -text
 node-gem/verror.h -text
+nodearray-gem/CalcColumn.BAT -text
+nodearray-gem/Makefile -text
+nodearray-gem/array.h -text
+nodearray-gem/databr.h -text
+nodearray-gem/datach.h -text
+nodearray-gem/doc/Readme.1st -text
+nodearray-gem/gdatastream.cpp -text
+nodearray-gem/gdatastream.h -text
+nodearray-gem/gemipm2k-sep.pro -text
+nodearray-gem/gemipm2k.pro -text
+nodearray-gem/gstring.cpp -text
+nodearray-gem/gstring.h -text
+nodearray-gem/ipm_chemical.cpp -text
+nodearray-gem/ipm_chemical2.cpp -text
+nodearray-gem/ipm_chemical3.cpp -text
+nodearray-gem/ipm_main.cpp -text
+nodearray-gem/ipm_simplex.cpp -text
+nodearray-gem/jama_cholesky.h -text
+nodearray-gem/jama_lu.h -text
+nodearray-gem/m_const.h -text
+nodearray-gem/m_gem2mtt.cpp -text
+nodearray-gem/m_param.h -text
+nodearray-gem/main.cpp -text
+nodearray-gem/ms_gem2mt.h -text
+nodearray-gem/ms_multi.cpp -text
+nodearray-gem/ms_multi.h -text
+nodearray-gem/ms_multi_file.cpp -text
+nodearray-gem/ms_multi_format.cpp -text
+nodearray-gem/ms_param.cpp -text
+nodearray-gem/node.cpp -text
+nodearray-gem/node.h -text
+nodearray-gem/node_format.cpp -text
+nodearray-gem/nodearray.cpp -text
+nodearray-gem/nodearray.h -text
+nodearray-gem/num_methods.cpp -text
+nodearray-gem/num_methods.h -text
+nodearray-gem/obj/Readme.txt -text
+nodearray-gem/particlearray.cpp -text
+nodearray-gem/particlearray.h -text
+nodearray-gem/platform/Linux-GNU/Makefile -text
+nodearray-gem/platform/Linux-PGI/Makefile -text
+nodearray-gem/platform/other/Makefile -text
+nodearray-gem/platform/win32bcc/Makefile -text
+nodearray-gem/platform/win32msvc/Makefile -text
+nodearray-gem/s_fgl.cpp -text
+nodearray-gem/s_fgl.h -text
+nodearray-gem/test-data/CalcColumn-dat.lst -text
+nodearray-gem/test-data/CalcColumn-dbr-0-0000.dat -text
+nodearray-gem/test-data/CalcColumn-dbr-0-0001.dat -text
+nodearray-gem/test-data/CalcColumn-dch.dat -text
+nodearray-gem/test-data/CalcColumn-ipm.dat -text
+nodearray-gem/test-data/CalcColumn.BAT -text
+nodearray-gem/test-data/Readme.1st -text
+nodearray-gem/test-data/testW2.dat -text
+nodearray-gem/tnt.h -text
+nodearray-gem/tnt_array1d.h -text
+nodearray-gem/tnt_array2d.h -text
+nodearray-gem/tnt_i_refvec.h -text
+nodearray-gem/v_user.h -text
+nodearray-gem/verror.h -text
