--- a/.gitattributes
+++ b/.gitattributes
@@ -138,6 +138,10 @@ node-gem/array.h -text
 node-gem/databr.h -text
 node-gem/datach.h -text
 node-gem/doc/Readme.1st -text
+node-gem/doc/dbr-dat-doc.txt -text
+node-gem/doc/dch-dat-doc.txt -text
+node-gem/doc/filelist-doc.txt -text
+node-gem/doc/ipm-dat-doc.txt -text
 node-gem/gdatastream.cpp -text
 node-gem/gdatastream.h -text
 node-gem/gem_node-sep.pro -text
