Minimal documentation for text input files of GEMIPM2K (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@28 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -150,6 +150,9 @@ node-gem/doc/dbr-dat-doc.txt -text
 node-gem/doc/dch-dat-doc.txt -text
 node-gem/doc/filelist-doc.txt -text
 node-gem/doc/ipm-dat-doc.txt -text
+node-gem/doc/scm-dbr-dat-doc.txt -text
+node-gem/doc/scm-dch-dat-doc.txt -text
+node-gem/doc/scm-ipm-dat-doc.txt -text
 node-gem/gdatastream.cpp -text
 node-gem/gdatastream.h -text
 node-gem/gem_node-sep.pro -text
