More documentation for text input files (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@31 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/rockflow-gem/platform/win32msvc/Makefile
+++ b/rockflow-gem/platform/win32msvc/Makefile
@@ -137,13 +137,13 @@ $(TARGET):  $(UICDECLS) $(OBJECTS) $(OBJMOC)
 mocables: $(SRCMOC)
 uicables: $(UICIMPLS) $(UICDECLS)
 
-Makefile: rockflow-gem-sep.pro  
-	$(QMAKE) -o Makefile rockflow-gem-sep.pro
-qmake: 
-	@$(QMAKE) -o Makefile rockflow-gem-sep.pro
+#Makefile: rockflow-gem-sep.pro  
+#	$(QMAKE) -o Makefile rockflow-gem-sep.pro
+#qmake: 
+#	@$(QMAKE) -o Makefile rockflow-gem-sep.pro
 
-dist:
-	$(ZIP) rockflow_gem.zip $(SOURCES) $(HEADERS) $(DIST) $(FORMS) c:/standalone/rockflow-gem/rockflow-gem-sep.pro  
+#dist:
+#	$(ZIP) rockflow_gem.zip $(SOURCES) $(HEADERS) $(DIST) $(FORMS) c:/standalone/rockflow-gem/rockflow-gem-sep.pro  
 
 uiclean:
 mocclean:
