--- a/.gitattributes
+++ b/.gitattributes
@@ -284,6 +284,10 @@ rockflow-gem/array.h -text
 rockflow-gem/databr.h -text
 rockflow-gem/datach.h -text
 rockflow-gem/doc/Readme.1st -text
+rockflow-gem/doc/dbr-dat-doc.txt -text
+rockflow-gem/doc/dch-dat-doc.txt -text
+rockflow-gem/doc/filelist-doc.txt -text
+rockflow-gem/doc/ipm-dat-doc.txt -text
 rockflow-gem/gdatastream.cpp -text
 rockflow-gem/gdatastream.h -text
 rockflow-gem/gstring.cpp -text
