Fixed error in MultiInit function (zeros pmp->X if pmp->Y zero)  SD
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@38 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -164,6 +164,8 @@ node-gem/gem_node-sep.pro -text
 node-gem/gem_node.pro -text
 node-gem/gstring.cpp -text
 node-gem/gstring.h -text
+node-gem/io_arrays.cpp -text
+node-gem/io_arrays.h -text
 node-gem/ipm_chemical.cpp -text
 node-gem/ipm_chemical2.cpp -text
 node-gem/ipm_chemical3.cpp -text
