--- a/.gitattributes
+++ b/.gitattributes
@@ -101,6 +101,7 @@ mcotac-gem/p_ibxc.dat -text
 mcotac-gem/p_ibxd.dat -text
 mcotac-gem/p_ibxe.dat -text
 mcotac-gem/p_ibxf.dat -text
+mcotac-gem/platform/PGI/Makefile -text
 mcotac-gem/platform/readme.1st -text
 mcotac-gem/por001.dat -text
 mcotac-gem/qn0001.dat -text
