Added instructions SD
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@49 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -38,6 +38,7 @@ mcotac-gem/datach.h -text
 mcotac-gem/datio.f -text
 mcotac-gem/debug/TEST.INI -text
 mcotac-gem/debug/initial.out -text
+mcotac-gem/doc/PGIcompile.txt -text
 mcotac-gem/doc/Readme.1st -text
 mcotac-gem/erech.f -text
 mcotac-gem/f_gem_node.cpp -text
