Added instructions SD
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@51 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -147,6 +147,7 @@ node-gem/TestAds.BAT -text
 node-gem/array.h -text
 node-gem/databr.h -text
 node-gem/datach.h -text
+node-gem/doc/PGIcompile.txt -text
 node-gem/doc/Readme.1st -text
 node-gem/doc/dbr-dat-doc.txt -text
 node-gem/doc/dch-dat-doc.txt -text
