Makefile for CRAY XT3
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@54 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -186,6 +186,7 @@ node-gem/node_format.cpp -text
 node-gem/num_methods.cpp -text
 node-gem/num_methods.h -text
 node-gem/obj/Readme.txt -text
+node-gem/platform/CRAYXT3-catamount/Makefile -text
 node-gem/platform/Linux-GNU/Makefile -text
 node-gem/platform/Linux-PGI/Makefile -text
 node-gem/platform/other/Makefile -text
