Added tests for Windows
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@57 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -143,7 +143,6 @@ mcotac-gem/we.dat -text
 mcotac-gem/wegdat1d_.c -text
 mcotac-gem/wf.dat -text
 node-gem/Makefile -text
-node-gem/TestAds.BAT -text
 node-gem/array.h -text
 node-gem/databr.h -text
 node-gem/datach.h -text
@@ -194,11 +193,34 @@ node-gem/platform/win32bcc/Makefile -text
 node-gem/platform/win32msvc/Makefile -text
 node-gem/s_fgl.cpp -text
 node-gem/s_fgl.h -text
+node-gem/test_ads/TestAds.BAT -text
+node-gem/test_ads/UL_on_Qtz-dat.lst -text
+node-gem/test_ads/UL_on_Qtz-dbr-0-0000.dat -text
+node-gem/test_ads/UL_on_Qtz-dch.dat -text
+node-gem/test_ads/UL_on_Qtz-ipm.dat -text
+node-gem/test_ads/main.cpp -text
+node-gem/test_ads/test_ads.out -text
+node-gem/test_data/CalcColumn-dat.lst -text
+node-gem/test_data/CalcColumn-dbr-0-0000.dat -text
+node-gem/test_data/CalcColumn-dbr-0-0001.dat -text
+node-gem/test_data/CalcColumn-dch.dat -text
+node-gem/test_data/CalcColumn-ipm.dat -text
+node-gem/test_data/CalcColumn.BAT -text
+node-gem/test_data/Readme.1st -text
+node-gem/test_data/main.cpp -text
+node-gem/test_data/test_data.out -text
 node-gem/tnt.h -text
 node-gem/tnt_array1d.h -text
 node-gem/tnt_array2d.h -text
 node-gem/tnt_i_refvec.h -text
-node-gem/tp_test.BAT -text
+node-gem/tp_test/CalcColumn-dat.lst -text
+node-gem/tp_test/CalcColumn-dbr-0-0000.dat -text
+node-gem/tp_test/CalcColumn-dbr-0-0001.dat -text
+node-gem/tp_test/CalcColumn-dch.dat -text
+node-gem/tp_test/CalcColumn-ipm.dat -text
+node-gem/tp_test/CalcColumn.BAT -text
+node-gem/tp_test/main.cpp -text
+node-gem/tp_test/tp_test.out -text
 node-gem/v_user.h -text
 node-gem/verror.h -text
 nodearray-gem/CalcColumn.BAT -text
