--- a/nodearray-gem/platform/win32msvc/Makefile
+++ b/nodearray-gem/platform/win32msvc/Makefile
@@ -50,6 +50,7 @@ HEADERS =	array.h \
 		node.h \
 		particlearray.h \
 		ms_multi.h \
+		io_arrays.h \
 		ms_gem2mt.h \
 		m_const.h \
 		m_param.h \
@@ -76,6 +77,7 @@ SOURCES =	gstring.cpp \
 		ipm_chemical3.cpp \
 		ipm_main.cpp \
 		ipm_simplex.cpp \
+		io_arrays.cpp \
 		main.cpp \
 		ms_param.cpp
 OBJECTS =	obj\gstring.obj \
@@ -94,6 +96,7 @@ OBJECTS =	obj\gstring.obj \
 		obj\ipm_chemical3.obj \
 		obj\ipm_main.obj \
 		obj\ipm_simplex.obj \
+		obj\io_arrays.obj \
 		obj\main.obj \
 		obj\ms_param.obj
 FORMS =	
@@ -173,6 +176,7 @@ clean: uiclean mocclean
 	-$(DEL_FILE) obj\ipm_chemical3.obj
 	-$(DEL_FILE) obj\ipm_main.obj
 	-$(DEL_FILE) obj\ipm_simplex.obj
+	-$(DEL_FILE) obj\io_arrays.obj
 	-$(DEL_FILE) obj\main.obj
 	-$(DEL_FILE) obj\ms_param.obj
 	-$(DEL_FILE) gemipm2k211.pdb
@@ -253,15 +257,16 @@ obj\node.obj: node.cpp node.h \
 		m_const.h \
 		v_user.h
 
-obj\node_format.obj: node_format.cpp node.h \
+obj\node_format.obj: node_format.cpp io_arrays.h \
+		node.h \
 		gdatastream.h \
+		gstring.h \
+		array.h \
 		m_param.h \
 		datach.h \
 		databr.h \
 		ms_multi.h \
 		verror.h \
-		gstring.h \
-		array.h \
 		m_const.h \
 		v_user.h
 
@@ -280,22 +285,24 @@ obj\particlearray.obj: particlearray.cpp particlearray.h \
 		m_const.h \
 		v_user.h
 
-obj\ms_multi_file.obj: ms_multi_file.cpp m_param.h \
+obj\ms_multi_file.obj: ms_multi_file.cpp io_arrays.h \
+		m_param.h \
 		gdatastream.h \
-		ms_multi.h \
-		verror.h \
 		gstring.h \
 		array.h \
+		ms_multi.h \
+		verror.h \
 		m_const.h \
 		v_user.h
 
-obj\ms_multi_format.obj: ms_multi_format.cpp m_param.h \
+obj\ms_multi_format.obj: ms_multi_format.cpp io_arrays.h \
+		m_param.h \
 		node.h \
+		gstring.h \
+		array.h \
 		gdatastream.h \
 		ms_multi.h \
 		verror.h \
-		gstring.h \
-		array.h \
 		m_const.h \
 		v_user.h \
 		datach.h \
@@ -356,8 +363,15 @@ obj\ipm_simplex.obj: ipm_simplex.cpp m_param.h \
 		m_const.h \
 		v_user.h
 
-obj\main.obj: main.cpp ms_gem2mt.h \
+obj\io_arrays.obj: io_arrays.cpp io_arrays.h \
+		verror.h \
 		gstring.h \
+		array.h
+
+obj\main.obj: main.cpp io_arrays.h \
+		ms_gem2mt.h \
+		gstring.h \
+		array.h \
 		particlearray.h \
 		nodearray.h \
 		node.h \
@@ -367,7 +381,6 @@ obj\main.obj: main.cpp ms_gem2mt.h \
 		gdatastream.h \
 		ms_multi.h \
 		verror.h \
-		array.h \
 		m_const.h \
 		v_user.h
 
