--- a/nodearray-gem/platform/Linux-PGI/Makefile
+++ b/nodearray-gem/platform/Linux-PGI/Makefile
@@ -24,7 +24,7 @@ AR       = ar cqs
 RANLIB   = 
 MOC      = 
 UIC      = 
-QMAKE    = qmake
+QMAKE    = 
 TAR      = tar -cf
 GZIP     = gzip -9f
 COPY     = cp -f
