Documentation files: added gems1.png (KD)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@76 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 * text=auto !eol
 GEMIPM2K/doc/html/gemipm2k-inp.html -text
 GEMIPM2K/doc/html/gemipm2k-man.html -text
+GEMIPM2K/doc/html/gems1.png -text
 GEMIPM2K/doc/txt/PGIcompile.txt -text
 GEMIPM2K/doc/txt/SVN-URL-ROCKFLOW-GEM.txt -text
 GEMIPM2K/doc/txt/dbr-dat-doc.txt -text
