Changed list file format and reading order of data files in node.cpp (KD)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@77 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,8 @@ GEMIPM2K/doc/html/gemipm2k-man.html -text
 GEMIPM2K/doc/html/gems1.png -text
 GEMIPM2K/doc/txt/PGIcompile.txt -text
 GEMIPM2K/doc/txt/SVN-URL-ROCKFLOW-GEM.txt -text
+GEMIPM2K/doc/txt/databr.h -text
+GEMIPM2K/doc/txt/datach.h -text
 GEMIPM2K/doc/txt/dbr-dat-doc.txt -text
 GEMIPM2K/doc/txt/dch-dat-doc.txt -text
 GEMIPM2K/doc/txt/f_gem_node.h -text
