Insert new changes SD
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@90 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -213,9 +213,10 @@ node-gem/test_data/CalcColumn-dbr-0-0001.dat -text
 node-gem/test_data/CalcColumn-dch.dat -text
 node-gem/test_data/CalcColumn-ipm.dat -text
 node-gem/test_data/CalcColumn.BAT -text
+node-gem/test_data/CalcColumn.out -text
 node-gem/test_data/Readme.1st -text
+node-gem/test_data/linux-run.bat -text
 node-gem/test_data/main.cpp -text
-node-gem/test_data/test_data.out -text
 node-gem/tnt.h -text
 node-gem/tnt_array1d.h -text
 node-gem/tnt_array2d.h -text
@@ -226,8 +227,9 @@ node-gem/tp_test/CalcColumn-dbr-0-0001.dat -text
 node-gem/tp_test/CalcColumn-dch.dat -text
 node-gem/tp_test/CalcColumn-ipm.dat -text
 node-gem/tp_test/CalcColumn.BAT -text
+node-gem/tp_test/CalcColumn_tp.out -text
+node-gem/tp_test/linux-run.bat -text
 node-gem/tp_test/main.cpp -text
-node-gem/tp_test/tp_test.out -text
 node-gem/v_user.h -text
 node-gem/verror.h -text
 nodearray-gem/CalcColumn.BAT -text
