--- a/node-gem/Makefile
+++ b/node-gem/Makefile
@@ -12,8 +12,8 @@ CC       = gcc
 CXX      = g++
 LEX      = flex
 YACC     = yacc
-CFLAGS   = -pipe -Wall -W -g  -DIPMGEMPLUGIN -D__unix
-CXXFLAGS = -pipe -Wall -W -g  -DIPMGEMPLUGIN -D__unix
+CFLAGS   = -pipe -Wall -W -g -O3  -DIPMGEMPLUGIN -D__unix
+CXXFLAGS = -pipe -Wall -W -g -O3  -DIPMGEMPLUGIN -D__unix
 LEXFLAGS = 
 YACCFLAGS= -d
 INCPATH  = -I.
