--- a/nodearray-gem/platform/Linux-PGI/Makefile
+++ b/nodearray-gem/platform/Linux-PGI/Makefile
@@ -12,8 +12,8 @@ CC       = pgCC
 CXX      = pgCC
 LEX      = flex
 YACC     = yacc
-CFLAGS   = -g  -DIPMGEMPLUGIN -D__unix
-CXXFLAGS = -g  -DIPMGEMPLUGIN -D__unix
+CFLAGS   = -g  -DIPMGEMPLUGIN -O3 -D__unix
+CXXFLAGS = -g  -DIPMGEMPLUGIN -O3 -D__unix
 LEXFLAGS = 
 YACCFLAGS= -d
 INCPATH  =  -I.
