git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@97 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/mcotac-gem/platform/PGI/Makefile
+++ b/mcotac-gem/platform/PGI/Makefile
@@ -2,7 +2,7 @@ mcotac1dgem.x: mcotac1d.o datio.o erech.o inistat2.o inparf.o setpar_.o walk2_.o
        gstring.o gdatastream.o s_fgl.o node.o node_format.o ms_multi_file.o \
        ms_multi_format.o ipm_chemical.o ipm_chemical2.o ipm_chemical3.o \
        ipm_main.o ipm_simplex.o io_arrays.o f_gem_node.o ms_param.o num_methods.o
-       
+
 	 pgf90 -o mcotac1dgem.x -lpgc -lrt -lstd -lC  mcotac1d.o datio.o \
                  erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o \
        gstring.o gdatastream.o s_fgl.o node.o node_format.o ms_multi_file.o \
@@ -136,7 +136,7 @@ ipm_main.o: ipm_main.cpp m_param.h \
 		tnt_i_refvec.h \
 		datach.h \
 		databr.h
-	pgCC   -c -g -O3  -DIPMGEMPLUGIN -D__unix ipm_main.cpp
+	pgCC   -c -g -O3  -DPGf90 -DIPMGEMPLUGIN -D__unix ipm_main.cpp
 ipm_simplex.o: ipm_simplex.cpp m_param.h \
 		gdatastream.h \
 		ms_multi.h \
