updated makefile for gnu linux g++
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@103 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/node-gem/platform/Linux-GNU/Makefile
+++ b/node-gem/platform/Linux-GNU/Makefile
@@ -84,6 +84,7 @@ SOURCES = gstring.cpp \
 OBJECTS = obj/gstring.o \
 		obj/gdatastream.o \
 		obj/s_fgl.o \
+		obj/s_fgl2.o \
 		obj/node.o \
 		obj/node_format.o \
 		obj/ms_multi_file.o \
@@ -185,6 +186,14 @@ obj/s_fgl.o: s_fgl.cpp s_fgl.h \
 		gstring.h \
 		array.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl.o s_fgl.cpp
+
+obj/s_fgl2.o: s_fgl2.cpp s_fgl.h \
+		m_const.h \
+		verror.h \
+		v_user.h \
+		gstring.h \
+		array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl2.o s_fgl2.cpp
 
 obj/node.o: node.cpp node.h \
 		gdatastream.h \
